--- a/static_pages/index.html
+++ b/static_pages/index.html
@@ -29,7 +29,9 @@
             onmouseleave="hideChar()" class="char-box" src="/sapp-hub/images/sillhouettes/RosterB.png">
             <img id="john" class="char-box"  onmouseover="johnShow()" onmouseleave="johnHide()" src="/sapp-hub/images/sillhouettes/RosterC.png">
             <img class="char-box" src="/sapp-hub/images/sillhouettes/RosterD.png">
+            <img src="/sapp-hub/images/random/casey_scrnsht.png">
         </div>
+        
     </div>
 
 </body>
