--- a/static_pages/index.html
+++ b/static_pages/index.html
@@ -28,8 +28,17 @@
             <img id="lluxim" onmouseover="showChar()"
             onmouseleave="hideChar()" class="char-box" src="/sapp-hub/images/sillhouettes/RosterB.png">
             <img id="john" class="char-box"  onmouseover="johnShow()" onmouseleave="johnHide()" src="/sapp-hub/images/sillhouettes/RosterC.png">
-            <img class="char-box" src="/sapp-hub/images/sillhouettes/RosterD.png">
-            <img src="/sapp-hub/images/random/casey_scrnsht.png">
+            <img
+            class="char-box" src="/sapp-hub/images/sillhouettes/RosterD.png">
+            <!--<img src="/sapp-hub/images/random/casey_scrnsht.png">-->
+            
+            <!--Style Container Test-->
+            <div class="style-container">
+            <img src="/sapp-hub/images/sillhouettes/RosterD.png">
+            </div>
+            <div class="style-container">
+            <img src="/sapp-hub/images/sillhouettes/RosterD.png">
+            </div>
         </div>
         
     </div>
