Added svgs and updated modal test page

--- a/static_pages/legends.html
+++ b/static_pages/legends.html
@@ -7,6 +7,6 @@
     <title>Legends of the Land</title>
 </head>
 <body>
-    <!--Page will feature Oscar, Cecil,-->
+    <!--Page will feature Oscar, Cecil, some others-->
 </body>
 </html>
